--- a/app/views/ruby_gems/index.html.erb
+++ b/app/views/ruby_gems/index.html.erb
@@ -4,7 +4,7 @@
 
   <%= form_tag({}, {method: :get}) do %>
     <div class="form-group row">
-      <%= text_field_tag(:q, @q, class: "form-control", placeholder: "My favorite gem...") %>
+      <%= text_field_tag(:q, params[:q], class: "form-control", placeholder: "My favorite gem...") %>
     </div>
 
     <div class="form-group row">
@@ -30,7 +30,7 @@
           <tr>
             <td><%= rubygem.name %></td>
             <td><%= rubygem.authors %></td>
-            <td><%= link_to 'Gem Details', ruby_gem_path(rubygem) %></td>
+            <td><%= link_to 'Gem Details', ruby_gem_path(rubygem.id) %></td>
           </tr>
         <% end %>
 
