--- a/app/views/ruby_gems/index.html.erb
+++ b/app/views/ruby_gems/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-  <% if @search_response&.results&.any? %>
+  <% if @search_results&.any? %>
 
     <table class="table table-hover">
       <thead class="thead-dark">
@@ -26,17 +26,17 @@
       </thead>
       <tbody>
 
-        <% @search_response.results.each do |rubygem| %>
+        <% @search_results.each do |rubygem| %>
           <tr>
             <td><%= rubygem.name %></td>
             <td><%= rubygem.authors %></td>
-            <td><%= link_to 'Gem Details', ruby_gem_path(rubygem.id) %></td>
+            <td><%= link_to 'Gem Details', ruby_gem_path(rubygem) %></td>
           </tr>
         <% end %>
 
       </tbody>
     </table>
 
-    <%= render "pagination", search_response: @search_response, query: params[:q] %>
+    <%= render "pagination", total_pages: @total_pages, current_page: @current_page, query: params[:q] %>
   <% end %>
 </div>
