--- a/app/views/ruby_gems/index.html.erb
+++ b/app/views/ruby_gems/index.html.erb
@@ -1,5 +1,5 @@
 <div class="starter-template">
-  <h1>James' Gem Hunt, a RubyGems Search Engine</h1>
+  <h1>Gem Hunt, a RubyGems Search Engine</h1>
   <p class="lead">This search box is backed by Swiftype's App Search product! <br> Please type whatever feels right.</p>
 
   <%= form_tag({}, {method: :get}) do %>
