FIXUP show downloads in the show view

--- a/app/views/ruby_gems/show.html.erb
+++ b/app/views/ruby_gems/show.html.erb
@@ -5,6 +5,8 @@
   <dl class="row">
     <dt class="col-sm-3">Authors</dt>
     <dd class="col-sm-9"><%= @rubygem.authors %></dd>
+    <dt class="col-sm-3">Total Downloads</dt>
+    <dd class="col-sm-9"><%= @rubygem.downloads %></dd>
     <dt class="col-sm-3">Info</dt>
     <dd class="col-sm-9"><%= @rubygem.info %></dd>
   </dl>
