Simplify index page.

--- a/app/views/ruby_gems/index.html.erb
+++ b/app/views/ruby_gems/index.html.erb
@@ -1,6 +1,6 @@
 <div class="starter-template">
-  <h1>Gem Hunt, a RubyGems Search Engine</h1>
-  <p class="lead">This search box is backed by Swiftype's App Search product! <br> Please type whatever feels right.</p>
+  <h1>Gem Hunt</h1>
+  <p class="lead">a RubyGems Search Engine <br> backed by Swiftype App Search</p>
 
   <%= form_tag({}, {method: :get}) do %>
     <div class="form-group row">
