--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,7 @@ $linkColor: #3A56E4;
 $facetLinkColor: #4f4f4f;
 $facetCountColor: #8B9BAD;
 $backgroundColor: #f7f7f7;
+$strongColor: #565656;
 
 $offset: 175px;
 
@@ -218,7 +219,7 @@ a.subtle-link {
   }
 
   &__submit {
-    padding: 0 2em;
+    padding: 0 2.5vw;
     margin-left: 10px;
 
     .live-filtering & {
@@ -372,15 +373,28 @@ a.subtle-link {
     &__footer .pagination {
       display: flex;
       justify-content: space-between;
+      font-size: 0.85em;
     }
 
     &__footer .page-item {
       margin-right: 1rem;
+      border-right: 1px solid #e0e0e0;
+      padding-right: 1rem;
       &:last-of-type {
         margin-right: 0;
+        border-right: none;
+      }
+      &:hover {
+        a {
+          color: lighten($linkColor, 10%);
+        }
       }
     }
+
+
   }
+
+
 }
 
 
@@ -388,12 +402,13 @@ a.subtle-link {
   background: #ffffff;
   border-radius: 4px;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.2);
-  padding: 1.5rem 0 1rem 0;
+  padding: 1.5rem 0 1.5rem 0;
   font-size: 0.85em;
   color: #828282;
 
   strong {
-    color: #4F4F4F;
+    font-weight: 100;
+    color: $strongColor;
   }
 
   & + & {
@@ -425,14 +440,14 @@ a.subtle-link {
     align-items: center;
   }
   &__title {
-    font-size: 1.2em;
+    font-size: 1.5em;
   }
   &__version {
     font-size: 12px;
     display: inline;
     vertical-align: bottom;
   }
-  &__lisence {
+  &__license {
     font-size: 12px;
     color: #999999;
     display: inline-block;
@@ -453,12 +468,12 @@ a.subtle-link {
   }
 
   &__details {
-    margin-top: 0.5rem;
-
-    background: #fdfdfd;
+    margin-top: 1rem;
+    background: white;
     border-radius: 4px;
     border: 1px solid #f6f6f6;
     padding: 0.5rem 1rem;
+    line-height: 1.7;
 
     > li {
       span {
