--- a/app/views/ruby_gems/index.html.erb
+++ b/app/views/ruby_gems/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="app-container ruby-demo">
+<div class="ruby-demo">
   <div class="site-background"></div>
   <div class="search-demo <%= 'active-search' if @search_results&.any? %> -live-filtering">
     <div class="search-demo__content">
@@ -10,7 +10,7 @@
           <div class="search-demo__icon-wrap">
             <%= image_tag('icons/icon-gem.svg', class: 'search-demo__icon', alt: 'Gem Search Icon') %>
           </div>
-          <h1 class="search-demo__title">Package Search</h1>
+          <h1 class="search-demo__title">Gem Hunt</h1>
           <h3 class="search-demo__sub-heading powered-by">
             <%= image_tag('powered-by@2x.png', alt: 'Powered by Swiftype') %>
           </h3>
