Respond to James' PR comments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -193,6 +193,39 @@ a.subtle-link {
       width: 100%;
       margin: auto;
     }
+
+    .form-check {
+      // border: 1px solid #f0f0f0;
+      // border-radius: 4px;
+      display: flex;
+      align-items: center;
+      width: 200px;
+
+      .form-check-input {
+        margin-right: 7px;
+        height: 100%;
+        // position: absolute;
+        // z-index: -1;
+        // opacity: 0;
+
+        // &:checked ~ .control__indicator {
+        //   width: 20px;
+        //   height: 20px;
+        //   background: red;
+        // }
+      }
+
+      // .control__indicator {
+      //   width: 20px;
+      //   height: 20px;
+      //   background: gray;
+      // }
+
+      .form-check-label {
+
+      }
+
+    }
   }
 
   &__text-input {
